return to delete surefire arguments