@@ -129,11 +129,6 @@
             <artifactId>google-pubsub-client</artifactId>
             <version>0.7</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -147,18 +142,5 @@
                 <artifactId>maven-dependency-plugin</artifactId>
             </plugin>
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <argLine>
-                            --add-opens no.ssb.dapla.catalog/no.ssb.dapla.catalog=ALL-UNNAMED
-                        </argLine>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 </project>
